--- a/src/app/table-history/table-history.component.html
+++ b/src/app/table-history/table-history.component.html
@@ -63,7 +63,7 @@
                       </td>
                       <td align="center">
 
-                        <div class="rating rating-statick" *ngIf="transactionItem.rating > 0">
+                        <div class="rating rating-static" *ngIf="transactionItem.rating > 0">
                           <div class="star" [ngClass]="{'is-active': transactionItem.rating === 5}"><img
                             src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
                           <div class="star" [ngClass]="{'is-active': transactionItem.rating === 4 || transactionItem.rating === 5}">
