--- a/src/app/_exchange/step3-2/step3-2.component.html
+++ b/src/app/_exchange/step3-2/step3-2.component.html
@@ -2,8 +2,7 @@
   <div class="step-title"><h3 class="h3">2. Fast verification</h3></div>
 
   <p class="p_small">
-    <b>Check your e-mail</b>, click on the activation <br>
-    link or copy the activation code and <b>continue</b> the process.
+    <b> Check your email</b>, click on the activation link and <b>continue</b> the process.
   </p>
 
   <form action="#" class="form" [ngClass]="{'custom-loader disabled': loading}">
