--- a/src/app/_exchange/step3-3/step3-3.component.html
+++ b/src/app/_exchange/step3-3/step3-3.component.html
@@ -2,7 +2,7 @@
   <div class="step-title"><h3 class="h3">2. E-mail verified!</h3></div>
 
   <p class="p_small">
-    Congratulations! Your e-mail address wasbr	<br>
+    Congratulations! Your e-mail address was<br>
     verified. Let’s <b>continue</b> with your <b>transaction</b> <br>
     process and <b>verify</b> your <b>phone number</b>.
   </p>
