--- a/src/app/_exchange/step4-2/step4-2.component.html
+++ b/src/app/_exchange/step4-2/step4-2.component.html
@@ -70,7 +70,7 @@
       <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="goToBack($event)">Back</a>
 
       <label>
-        <button class="btn btn-accent rippler rippler-default" [disabled]="step4_2Form.invalid && form4_2.submitted">Exhange</button>
+        <button class="btn btn-accent rippler rippler-default" [disabled]="step4_2Form.invalid && form4_2.submitted">Exchange</button>
       </label>
     </div>
   </form>
