--- a/src/app/_exchange/step4-3/step4-3.component.html
+++ b/src/app/_exchange/step4-3/step4-3.component.html
@@ -18,6 +18,6 @@
 
   <div class="between-children">
     <a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Back</a>
-    <a href="#" class="btn btn-accent rippler rippler-default">Exhange</a>
+    <a href="#" class="btn btn-accent rippler rippler-default">Exchange</a>
   </div>
 </div>
