--- a/src/app/_user/user-activate/user-activate.component.html
+++ b/src/app/_user/user-activate/user-activate.component.html
@@ -3,7 +3,7 @@
 
     <div class="container">
       <header class="content__header">
-        <div class="title greenColor"><h1 class="h1">Success account activation</h1></div>
+        <div class="title greenColor"><h1 class="h1">Account Activated Successfully</h1></div>
 
         <div class="sub-title">
           <p class="p_large">You have successfully activated your account! Please go to the exchange page.</p>
