--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -65,7 +65,7 @@
 
                   <div class="item" id="account">
                     <div class="item__head title-inner ">What is account in Smartex Exchange and why do I need it?</div>
-                    <div class="item__content"><p class="pre-line">Account in Smartex Exchange is your virtual offcie where you can see everything aboutyour activity on Smartex.info. You need to have an account to connect your payments with your person according to relevant laws.</p></div>
+                    <div class="item__content"><p class="pre-line">Account in Smartex Exchange is your virtual offcie where you can see everything about your activity on Smartex.info. You need to have an account to connect your payments with your person according to relevant laws.</p></div>
                   </div>
 
                   <div class="item" id="check_order">
@@ -101,9 +101,9 @@
                     <div class="item__content"><p class="pre-line">No, it is not. A lot of exchange directions are available without registration or
                       verification.
 
-                      - On the other hand, there are exchange directions where is registration and verification reaquired and there are other benefits to be registered.
-                      - Registered user can see all his transactions list
-                      - Registered User is a part of our discount programme!</p></div>
+                      - On the other hand, there are exchange directions where registration and verification are required and there are also other benefits for all registered accounts.
+                      - Registered user can see all list of his transactions.
+                      - Registered user is a part of our discount programme!</p></div>
                   </div>
 
                   <div class="item" id="verification">
@@ -129,7 +129,7 @@
                 <div class="items list-numeric drop">
 
                   <div class="item" id="receive">
-                    <div class="item__head title-inner ">How long it will take to recieve the payout?</div>
+                    <div class="item__head title-inner">How long it takes to receive the payout?</div>
                     <div class="item__content"><p class="pre-line">If you are considering purchasing a new grill, or barbecue, you will be faced with a multitude of options to choose between.
                       However, there is one choice which you will need to make fairly quickly in your quest for the perfect grill for you. That decision is whether to buy
                       a charcoal or gas grill.</p></div>
