--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -53,5 +53,8 @@
   margin-bottom: 3rem
   margin-top: 0
 
-
+.exchange .column .btn-border
+  background-color: #fff
+  &:hover
+    background-color: #fff
 
