--- a/src/app/prepaid-card/prepaid-card.component.html
+++ b/src/app/prepaid-card/prepaid-card.component.html
@@ -75,38 +75,38 @@
 
                     <div class="mini-cards">
                       <div class="item blank-self" data-count="1">
-                        <div class="item__head title-inner">Popis výhody</div>
+                        <div class="item__head title-inner">One card for all exchange platforms</div>
                         <div class="item__content pre-line p_small">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing eli sed do eiusmod temp.
+                          Prepaid credit cards will be one of the payment systems in a number of Unicash exchange platforms.
 
-                          Aliqua. Ut enim ad minim veniam, quis nostrud.
+                          That means over 20 exchange platforms accepting prepaid credit card.
                         </div>
                       </div>
 
                       <div class="item blank-self" data-count="2">
-                        <div class="item__head title-inner">Popis výhody</div>
+                        <div class="item__head title-inner">Unifying card</div>
                         <div class="item__content pre-line p_small">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing eli sed do eiusmod temp.
+                          What options do regular prepaid cards offer to exchange cryptocurrency for FIAT?
 
-                          Aliqua. Ut enim ad minim veniam, quis nostrud.
+                          Mostly, it's just few currencies. Be ahead of everyone else and get the prepaid card that supports dozens of currencies thanks to partner network.
                         </div>
                       </div>
 
                       <div class="item blank-self" data-count="3">
-                        <div class="item__head title-inner">Popis výhody</div>
+                        <div class="item__head title-inner">Fast</div>
                         <div class="item__content pre-line p_small">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing eli sed do eiusmod temp.
+                          Each card has its unique number, which makes it easy to recognize it.
 
-                          Aliqua. Ut enim ad minim veniam, quis nostrud.
+                          That's why cryptocurrency exchange usually takes only few minutes to complete within the exchange platforms.
                         </div>
                       </div>
 
                       <div class="item blank-self" data-count="4">
-                        <div class="item__head title-inner">Popis výhody</div>
+                        <div class="item__head title-inner">Convenience</div>
                         <div class="item__content pre-line p_small">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing eli sed do eiusmod temp.
+                          The key feature of the currencies is their utility for ordinary payments – this stands for user comfort.
 
-                          Aliqua. Ut enim ad minim veniam, quis nostrud.
+                          With a prepaid card, you do not have to worry whether your favorite shop accepts payments with cryptocurrency.
                         </div>
                       </div>
                     </div>
