--- a/src/app/_exchange/step3-4/step3-4.component.html
+++ b/src/app/_exchange/step3-4/step3-4.component.html
@@ -5,7 +5,7 @@
   <p class="p_small" *ngIf="!userModel.verification_image">
     Congratulations! Your phone number was <br>
     verified. Let’s <b>continue</b> with your <b>transaction</b> <br>
-    process and <b>verify</b> your <b>identity card</b>.
+    process and <b>upload</b> your <b>identity card</b>.
   </p>
   <form class="form" [ngClass]="{'custom-loader disabled': loadingIdCard}" (submit)="submitIdCardForm($event)" [formGroup]="idCardForm" #ngIdCardForm="ngForm" novalidate>
 
@@ -55,7 +55,7 @@
             </g>
           </svg>
         </div>
-        <button type="submit" class="btn btn-accent rippler rippler-default" *ngIf="!userModel.verification_image" [disabled]="idCardForm.invalid && ngIdCardForm.submitted">Verify ID</button>
+        <button type="submit" class="btn btn-accent rippler rippler-default" *ngIf="!userModel.verification_image" [disabled]="idCardForm.invalid && ngIdCardForm.submitted">Upload ID</button>
         <button type="submit" class="btn btn-accentSecond rippler rippler-default" *ngIf="userModel.verification_image" (click)="goToNext($event)">Next</button>
       </label>
     </div>
