--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -39,7 +39,7 @@
                       <div class="items">
                         <div class="item">
                           <div class="value-wr">
-                            <div class="item__label label">Company address</div>
+                            <div class="item__label label">Company address:</div>
                             <div class="item__value title-inner">95 1st Ave, New York, NY 10003, USA</div>
                           </div>
                         </div>
@@ -56,7 +56,7 @@
                         <div class="item">
                           <div class="item__icon ic ic-mail"></div>
                           <div class="value-wr">
-                            <div class="item__label label">Support e-amil:</div>
+                            <div class="item__label label">Support e-mail:</div>
                             <div class="item__value title-inner">support@smartex.info</div>
                           </div>
                         </div>
