--- a/src/app/table-history/table-history.component.sass
+++ b/src/app/table-history/table-history.component.sass
@@ -1,2 +1,5 @@
 .hard-table table tbody .tr-content td
   padding-top: 2rem
+.hard-table table tbody td.transfer-name
+  padding-left: 2.4rem
+  padding-right: 2.4rem
